# backtester_rs

./: Cargo.toml  README.md  backtest.py  binding.py  compare.py  convert.py  pyproject.toml  requirements.txt
src/: candle.rs  lib.rs  trade.rs
tests/: compare.py  test.ipynb  test.py
